welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:3: error: '(' expected but identifier found.
  if a==b return som*2
     ^sumDouble:5: error: illegal start of simple expression
} 
^